--- a/source/info.plist
+++ b/source/info.plist
@@ -3,7 +3,7 @@
 <plist version="1.0">
 <dict>
 	<key>bundleid</key>
-	<string>giovanni-paperpAlfred</string>
+	<string>giovanni.paperpAlfred</string>
 	<key>category</key>
 	<string>Productivity</string>
 	<key>connections</key>
