--- a/source/prefs.plist
+++ b/source/prefs.plist
@@ -5,7 +5,7 @@
 	<key>PAPLIBRARY</key>
 	<string>~/Library/CloudStorage/GoogleDrive-giovannicoppola@gmail.com/My Drive/GD_REGN/coding/PaperpAlfred/paperpileExports/Paperpile.txt</string>
 	<key>PAPLIBRARY_BIB</key>
-	<string>~/Library/CloudStorage/GoogleDrive-giovannicoppola@gmail.com/My Drive/Tsu_ASO-RNAi.bib</string>
+	<string>~/Library/CloudStorage/GoogleDrive-giovannicoppola@gmail.com/My Drive/paperpile.bib</string>
 	<key>PAPPATH</key>
 	<string>~/Library/CloudStorage/GoogleDrive-giovannicoppola@gmail.com/My Drive/Paperpile</string>
 </dict>
