--- a/source/prefs.plist
+++ b/source/prefs.plist
@@ -3,9 +3,9 @@
 <plist version="1.0">
 <dict>
 	<key>PAPLIBRARY</key>
-	<string>~/Library/CloudStorage/GoogleDrive-giovannicoppola@gmail.com/My Drive/GD_REGN/coding/PaperpAlfred/paperpileExports/Paperpile.txt</string>
+	<string>~/Library/CloudStorage/OneDrive-RegeneronPharmaceuticals,Inc/Paperpile library/Paperpile.txt</string>
 	<key>PAPLIBRARY_BIB</key>
-	<string>~/Library/CloudStorage/GoogleDrive-giovannicoppola@gmail.com/My Drive/paperpile.bib</string>
+	<string>~/Downloads/Tsu_ASO-RNAi.bib</string>
 	<key>PAPPATH</key>
 	<string>~/Library/CloudStorage/GoogleDrive-giovannicoppola@gmail.com/My Drive/Paperpile</string>
 </dict>
