--- a/source/prefs.plist
+++ b/source/prefs.plist
@@ -3,9 +3,7 @@
 <plist version="1.0">
 <dict>
 	<key>PAPLIBRARY</key>
-	<string>~/Library/CloudStorage/OneDrive-RegeneronPharmaceuticals,Inc/Paperpile library/Paperpile.txt</string>
-	<key>PAPLIBRARY_BIB</key>
-	<string>~/Downloads/Tsu_ASO-RNAi.bib</string>
+	<string>~/Downloads/Paperpile - Dec 04 JSON Export.txt</string>
 	<key>PAPPATH</key>
 	<string>~/Library/CloudStorage/GoogleDrive-giovannicoppola@gmail.com/My Drive/Paperpile</string>
 </dict>
