--- a/source/info.plist
+++ b/source/info.plist
@@ -8,19 +8,6 @@
 	<string>Productivity</string>
 	<key>connections</key>
 	<dict>
-		<key>032960A2-34C1-4272-B9E0-65A6465AE456</key>
-		<array>
-			<dict>
-				<key>destinationuid</key>
-				<string>36DC06AF-E15C-4ABC-BC31-DEF5C3D3638D</string>
-				<key>modifiers</key>
-				<integer>0</integer>
-				<key>modifiersubtext</key>
-				<string></string>
-				<key>vitoclose</key>
-				<false/>
-			</dict>
-		</array>
 		<key>1AAAEDC3-C0EE-47D4-83C7-2A5AB352295E</key>
 		<array>
 			<dict>
@@ -267,7 +254,7 @@
 	<key>createdby</key>
 	<string>@giovannicoppoIa</string>
 	<key>description</key>
-	<string>Search your Paperpile library with Alfred, Python3 version</string>
+	<string>Search your Paperpile library with Alfred</string>
 	<key>disabled</key>
 	<false/>
 	<key>name</key>
@@ -340,7 +327,7 @@
 				<key>escaping</key>
 				<integer>102</integer>
 				<key>keyword</key>
-				<string>ppl</string>
+				<string>{var:labelkeyword}</string>
 				<key>queuedelaycustom</key>
 				<integer>3</integer>
 				<key>queuedelayimmediatelyinitially</key>
@@ -484,7 +471,7 @@ python3 labels.py "$1"
 				<key>escaping</key>
 				<integer>102</integer>
 				<key>keyword</key>
-				<string>ppf</string>
+				<string>{var:folderkeyword}</string>
 				<key>queuedelaycustom</key>
 				<integer>3</integer>
 				<key>queuedelayimmediatelyinitially</key>
@@ -653,7 +640,7 @@ python3 folders.py "$1"
 				<key>escaping</key>
 				<integer>102</integer>
 				<key>keyword</key>
-				<string>ppty</string>
+				<string>{var:typekeyword}</string>
 				<key>queuedelaycustom</key>
 				<integer>3</integer>
 				<key>queuedelayimmediatelyinitially</key>
@@ -793,7 +780,7 @@ python3 myTypes.py "$1"</string>
 				<key>escaping</key>
 				<integer>102</integer>
 				<key>keyword</key>
-				<string>ppp</string>
+				<string>{var:mainkeyword}</string>
 				<key>queuedelaycustom</key>
 				<integer>3</integer>
 				<key>queuedelayimmediatelyinitially</key>
@@ -916,93 +903,6 @@ python3 papers.py "$1"
 		<dict>
 			<key>config</key>
 			<dict>
-				<key>action</key>
-				<integer>0</integer>
-				<key>argument</key>
-				<integer>0</integer>
-				<key>focusedappvariable</key>
-				<false/>
-				<key>focusedappvariablename</key>
-				<string></string>
-				<key>hotkey</key>
-				<integer>11</integer>
-				<key>hotmod</key>
-				<integer>1310720</integer>
-				<key>hotstring</key>
-				<string>B</string>
-				<key>leftcursor</key>
-				<false/>
-				<key>modsmode</key>
-				<integer>0</integer>
-				<key>relatedAppsMode</key>
-				<integer>0</integer>
-			</dict>
-			<key>type</key>
-			<string>alfred.workflow.trigger.hotkey</string>
-			<key>uid</key>
-			<string>032960A2-34C1-4272-B9E0-65A6465AE456</string>
-			<key>version</key>
-			<integer>2</integer>
-		</dict>
-		<dict>
-			<key>config</key>
-			<dict>
-				<key>alfredfiltersresults</key>
-				<false/>
-				<key>alfredfiltersresultsmatchmode</key>
-				<integer>0</integer>
-				<key>argumenttreatemptyqueryasnil</key>
-				<true/>
-				<key>argumenttrimmode</key>
-				<integer>0</integer>
-				<key>argumenttype</key>
-				<integer>1</integer>
-				<key>escaping</key>
-				<integer>102</integer>
-				<key>keyword</key>
-				<string>ppb</string>
-				<key>queuedelaycustom</key>
-				<integer>3</integer>
-				<key>queuedelayimmediatelyinitially</key>
-				<true/>
-				<key>queuedelaymode</key>
-				<integer>0</integer>
-				<key>queuemode</key>
-				<integer>1</integer>
-				<key>runningsubtext</key>
-				<string>❗Please wait while I rebuild the database❗</string>
-				<key>script</key>
-				<string>export PATH=/opt/homebrew/bin:/usr/local/bin:$PATH
-python3 papers_bibTeX.py "$1"
-
-
-
-
-
-</string>
-				<key>scriptargtype</key>
-				<integer>1</integer>
-				<key>scriptfile</key>
-				<string></string>
-				<key>subtext</key>
-				<string></string>
-				<key>title</key>
-				<string>Welcome to paperpAlfred  (BibTeX)👋</string>
-				<key>type</key>
-				<integer>0</integer>
-				<key>withspace</key>
-				<false/>
-			</dict>
-			<key>type</key>
-			<string>alfred.workflow.input.scriptfilter</string>
-			<key>uid</key>
-			<string>36DC06AF-E15C-4ABC-BC31-DEF5C3D3638D</string>
-			<key>version</key>
-			<integer>3</integer>
-		</dict>
-		<dict>
-			<key>config</key>
-			<dict>
 				<key>concurrently</key>
 				<false/>
 				<key>escaping</key>
@@ -1025,17 +925,17 @@ python3 papers_bibTeX.py "$1"
 		</dict>
 	</array>
 	<key>readme</key>
-	<string>Search your Paperpile library with Alfred
+	<string># Search your Paperpile library with Alfred
 https://github.com/giovannicoppola/paperpAlfred
 
-Environment Variables
-- MAXRESULTS: max number of results returned (default: 99)
+# Environment Variables
 - PAPLIBRARY: path to Paperpile library file (this is needed)
 - PAPPATH: path to Paperpile folder in Google Drive (optional, to open downloaded PDFs in system viewer)
+- MAXRESULTS: max number of results returned (default: 99)
 - KEY_PREFIX: prefix for citekeys (default: '@')
 
 
-Basic usage (`ppp` ↩️)
+# Basic usage (`ppp` ↩️)
 
 - Simple search: `ppp` -- query across all fields
 
@@ -1047,7 +947,8 @@ Basic usage (`ppp` ↩️)
 
 - Filter by item type first: `ppty`
 
-- Advanced search
+## Advanced search
+Enter the corresponding string followed by your search (e.g.: year:2022):
         - title:
         - abstract:
         - citekey:
@@ -1060,7 +961,7 @@ Basic usage (`ppp` ↩️)
         - last: [last author]
         - type: [publication type]
 
-- Output
+## Output
 1. ⏎ open PDF with system viewer 
 2. ⇧⏎ abstract (show and copy to clipboard)
 3. ⌃⏎ complete reference (show and copy to clipboard)
@@ -1070,17 +971,6 @@ Basic usage (`ppp` ↩️)
 7. ⌘⌥⏎ open record in Paperpile</string>
 	<key>uidata</key>
 	<dict>
-		<key>032960A2-34C1-4272-B9E0-65A6465AE456</key>
-		<dict>
-			<key>colorindex</key>
-			<integer>3</integer>
-			<key>note</key>
-			<string>Set this Hotkey to launch paperAlfred</string>
-			<key>xpos</key>
-			<real>30</real>
-			<key>ypos</key>
-			<real>750</real>
-		</dict>
 		<key>09F993A7-F21C-4541-8C43-6641A0B6E1D8</key>
 		<dict>
 			<key>xpos</key>
@@ -1150,17 +1040,6 @@ Basic usage (`ppp` ↩️)
 			<real>235</real>
 			<key>ypos</key>
 			<real>200</real>
-		</dict>
-		<key>36DC06AF-E15C-4ABC-BC31-DEF5C3D3638D</key>
-		<dict>
-			<key>colorindex</key>
-			<integer>5</integer>
-			<key>note</key>
-			<string>Search your BibTeX Paperpile library</string>
-			<key>xpos</key>
-			<real>525</real>
-			<key>ypos</key>
-			<real>750</real>
 		</dict>
 		<key>3B12BCC5-45EE-4E9D-95FB-0B156B0704B3</key>
 		<dict>
@@ -1307,6 +1186,48 @@ Basic usage (`ppp` ↩️)
 			<key>config</key>
 			<dict>
 				<key>default</key>
+				<string></string>
+				<key>filtermode</key>
+				<integer>2</integer>
+				<key>placeholder</key>
+				<string></string>
+				<key>required</key>
+				<true/>
+			</dict>
+			<key>description</key>
+			<string>Location of the JSON Paperpile Library file</string>
+			<key>label</key>
+			<string>Paperpile Library</string>
+			<key>type</key>
+			<string>filepicker</string>
+			<key>variable</key>
+			<string>PAPLIBRARY</string>
+		</dict>
+		<dict>
+			<key>config</key>
+			<dict>
+				<key>default</key>
+				<string></string>
+				<key>filtermode</key>
+				<integer>1</integer>
+				<key>placeholder</key>
+				<string></string>
+				<key>required</key>
+				<false/>
+			</dict>
+			<key>description</key>
+			<string>Path to Google Drive Paperpile folder</string>
+			<key>label</key>
+			<string>Paperpile Path</string>
+			<key>type</key>
+			<string>filepicker</string>
+			<key>variable</key>
+			<string>PAPPATH</string>
+		</dict>
+		<dict>
+			<key>config</key>
+			<dict>
+				<key>default</key>
 				<string>99</string>
 				<key>placeholder</key>
 				<string></string>
@@ -1349,58 +1270,85 @@ Basic usage (`ppp` ↩️)
 			<key>config</key>
 			<dict>
 				<key>default</key>
+				<string>ppp</string>
+				<key>placeholder</key>
 				<string></string>
-				<key>filtermode</key>
-				<integer>2</integer>
 				<key>required</key>
 				<false/>
+				<key>trim</key>
+				<true/>
 			</dict>
 			<key>description</key>
-			<string>Location of the JSON Paperpile Library file</string>
+			<string></string>
 			<key>label</key>
-			<string>Paperpile Library</string>
+			<string>Keyword to launch Paperpile</string>
 			<key>type</key>
-			<string>filepicker</string>
+			<string>textfield</string>
 			<key>variable</key>
-			<string>PAPLIBRARY</string>
+			<string>mainkeyword</string>
 		</dict>
 		<dict>
 			<key>config</key>
 			<dict>
 				<key>default</key>
+				<string>ppf</string>
+				<key>placeholder</key>
 				<string></string>
-				<key>filtermode</key>
-				<integer>1</integer>
 				<key>required</key>
 				<false/>
+				<key>trim</key>
+				<true/>
 			</dict>
 			<key>description</key>
-			<string>Path to Google Drive Paperpile folder</string>
+			<string></string>
 			<key>label</key>
-			<string>Paperpile path</string>
+			<string>Keyword to lauch folder search</string>
 			<key>type</key>
-			<string>filepicker</string>
+			<string>textfield</string>
 			<key>variable</key>
-			<string>PAPPATH</string>
+			<string>folderkeyword</string>
 		</dict>
 		<dict>
 			<key>config</key>
 			<dict>
 				<key>default</key>
+				<string>ppl</string>
+				<key>placeholder</key>
 				<string></string>
-				<key>filtermode</key>
-				<integer>2</integer>
 				<key>required</key>
 				<false/>
+				<key>trim</key>
+				<true/>
 			</dict>
 			<key>description</key>
-			<string>Location of BibTeX Paperpile library</string>
+			<string></string>
 			<key>label</key>
-			<string>BibTeX Library</string>
+			<string>Keyword to launch label search</string>
 			<key>type</key>
-			<string>filepicker</string>
+			<string>textfield</string>
 			<key>variable</key>
-			<string>PAPLIBRARY_BIB</string>
+			<string>labelkeyword</string>
+		</dict>
+		<dict>
+			<key>config</key>
+			<dict>
+				<key>default</key>
+				<string>ppty</string>
+				<key>placeholder</key>
+				<string></string>
+				<key>required</key>
+				<false/>
+				<key>trim</key>
+				<true/>
+			</dict>
+			<key>description</key>
+			<string></string>
+			<key>label</key>
+			<string>Keyword to launch type search</string>
+			<key>type</key>
+			<string>textfield</string>
+			<key>variable</key>
+			<string>typekeyword</string>
 		</dict>
 	</array>
 	<key>version</key>
