--- a/source/prefs.plist
+++ b/source/prefs.plist
@@ -3,7 +3,7 @@
 <plist version="1.0">
 <dict>
 	<key>PAPLIBRARY</key>
-	<string>~/Library/CloudStorage/OneDrive-RegeneronPharmaceuticals,Inc/Paperpile library/Paperpile.txt</string>
+	<string>~/Downloads/Paperpile - Library - Nov 12.json</string>
 	<key>PAPLIBRARY_BIB</key>
 	<string>~/Downloads/Tsu_ASO-RNAi.bib</string>
 	<key>PAPPATH</key>
